# atcoder-friends

./: .gitignore  .travis.yml  LICENSE  README.md  atcoder-friends.cabal
src/: App.hs  Fetch.hs  Main.hs  Parse.hs  Url.hs  Util.hs
src-exec/: Main.hs
template/: index.hamlet  standings.hamlet
