name: atcoder-friends
version: 1.0
author: asi1024
synopsis: atcoder-friends
cabal-version: >= 1.10
build-type: Simple

library
  hs-source-dirs: src
  default-Language: Haskell2010
  build-depends: base >= 4 && < 5
               , aeson        == 0.10.0.0
               , blaze-html   == 0.8.1.1
               , data-default == 0.5.3
               , bytestring   == 0.10.4.0
               , conduit      == 1.2.5.1
               , http-conduit == 2.1.8
               , network      == 2.6.2.1
               , regex-compat == 0.95.1
               , scotty       == 0.10.2
               , shakespeare  == 2.0.7
               , text         == 1.2.1.3
               , transformers == 0.4.2.0
               , wai-extra    == 3.0.12
  exposed-modules:
    App
    Fetch
    Parse
    Url
  ghc-options: -Wall -fno-warn-orphans

executable main
  hs-source-dirs: src-exec
  Default-Language: Haskell2010
  main-is:  Main.hs
  build-depends: base >= 4 && < 5
               , atcoder-friends
  ghc-options: -Wall
