name: atcoder-friends
version: 1.1
author: asi1024
synopsis: atcoder-friends
cabal-version: >= 1.10
build-type: Simple

library
  hs-source-dirs: src
  default-Language: Haskell2010
  build-depends: base >= 4.5 && < 5
               , aeson        == 0.11.0.0
               , blaze-html   == 0.8.1.1
               , bytestring   == 0.10.6.0
               , conduit      == 1.2.5.1
               , data-default == 0.5.3
               , http-conduit == 2.1.8
               , network      == 2.6.2.1
               , regex-compat == 0.95.1
               , scotty       == 0.11.0
               , shakespeare  == 2.0.7
               , text         == 1.2.2.0
               , transformers == 0.4.2.0
               , unordered-containers == 0.2.5.1
               , wai-extra    == 3.0.14
               , warp         == 3.2.2
  exposed-modules:
    App
    Fetch
    Parse
    Util
    Url
  ghc-options: -Wall -fno-warn-orphans

executable main
  hs-source-dirs: src-exec
  Default-Language: Haskell2010
  main-is:  Main.hs
  build-depends: base >= 4 && < 5
               , atcoder-friends
  ghc-options: -Wall
