name:                atcoder-friends
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/atcoder-friends#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App Fetch Parse Util Url
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , conduit
                     , data-default
                     , http-conduit
                     , network
                     , regex-compat
                     , scotty
                     , shakespeare
                     , text
                     , transformers
                     , unordered-containers
                     , wai-extra
                     , warp

  default-language:    Haskell2010

executable atcoder-friends-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , atcoder-friends
  default-language:    Haskell2010

test-suite atcoder-friends-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , atcoder-friends
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/atcoder-friends
